--- a/com.cucumlips.maven.eclipse/pom.xml
+++ b/com.cucumlips.maven.eclipse/pom.xml
@@ -42,6 +42,96 @@
     	<artifactId>gson</artifactId>
     	<version>2.8.6</version>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.apiguardian/apiguardian-api -->
+	<dependency>
+	    <groupId>org.apiguardian</groupId>
+	    <artifactId>apiguardian-api</artifactId>
+	    <version>1.1.0</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-java</artifactId>
+	    <version>6.1.1</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-core</artifactId>
+	    <version>6.1.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-expressions</artifactId>
+	    <version>10.2.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-gherkin -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-gherkin</artifactId>
+	    <version>6.1.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-gherkin-messages -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-gherkin-messages</artifactId>
+	    <version>6.1.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java8 -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-java8</artifactId>
+	    <version>6.1.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-plugin -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-plugin</artifactId>
+	    <version>6.1.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/datatable -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>datatable</artifactId>
+	    <version>3.3.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/docstring -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>docstring</artifactId>
+	    <version>6.1.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/html-formatter -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>html-formatter</artifactId>
+	    <version>6.0.3</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/messages -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>messages</artifactId>
+	    <version>12.1.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/tag-expressions -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>tag-expressions</artifactId>
+	    <version>3.0.0</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/net.jodah/typetools -->
+	<dependency>
+	    <groupId>net.jodah</groupId>
+	    <artifactId>typetools</artifactId>
+	    <version>0.6.2</version>
+	</dependency>
+	
+	
+	
+	
+    
   </dependencies>
 
   <build>
