--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file com.cucumlips.maven.eclipse/pom.xml
+      
+    - name: Deploy report pages to Github Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with: 
+        gihub_token : ${{ secrets.GITHUB_TOKEN}}
+        publish_dir: ./com.cucumlips.maven.eclipse/target
