Updated mavevn.yml #5

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Deploy report pages to Github Pages
       uses: peaceiris/actions-gh-pages@v3
       with: 
-        gihub_token : ${{ secrets.GITHUB_TOKEN}}
+        github_token : ${{ secrets.GITHUB_TOKEN}}
         publish_dir: ./com.cucumlips.maven.eclipse/target
